Fix dark mode sidebar bg color consistency

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -80,7 +80,8 @@
   }
 
   .left-container {
-    display: none; /* Hide logo on mobile */
+    max-width: 400%;
+    margin-bottom: -2em;
   }
 
   .hero {
